--- a/Docs/style.css
+++ b/Docs/style.css
@@ -1,7 +1,5 @@
 body {  width: 40em;
-        margin: 2em;
-        margin-left: auto;
-        margin-right: auto;
+        margin: 2em auto 80em auto;
         font-size: 0.9em;
         font-family: Verdana, Arial, sans-serif;
 }
